<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tvFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dish1"
        android:textSize="35sp"
        android:background="@color/purple_200"
        android:textColor="#FAFAFA"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:id="@+id/tvFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dish2"
        android:textSize="35sp"
        android:background="@color/teal_700"
        android:textColor="#FAFAFA"
        android:layout_toEndOf="@+id/tvFour"
        android:layout_below="@+id/tvFour"

        />
    <TextView
        android:id="@+id/tvSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dish3"
        android:textSize="35sp"
        android:background="#FAE002"
        android:textColor="@color/black"
        android:layout_toStartOf="@+id/tvFive"
        android:layout_below="@+id/tvFive"
        android:layout_alignBaseline="@+id/tvFive"
        />
    <RadioGroup
        android:id="@+id/rgOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSix"
        >
        <RadioButton
            android:id="@+id/rbOne"
            android:layout_width="wrap_content"
            android:text="@string/pay_on"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/purple_700"
            />
        <RadioButton
            android:id="@+id/rbTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_of"
            android:textSize="30sp"
            android:textColor="@color/teal_700"
            />
    </RadioGroup>
    <Button
        android:id="@+id/bOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="25sp"
        android:backgroundTint="@color/teal_200"
        android:layout_below="@+id/rgOne"
        android:layout_marginLeft="70dp"
    />

</RelativeLayout>