<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <!-- TODO: Update blank fragment layout -->
   <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FAEAEA"
        android:weightSum="4"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/im_menu"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:src="@drawable/menu" />

            <TextView
                android:id="@+id/tvReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:layout_toRightOf="@+id/im_menu"
                android:background="@color/purple_700"
                android:padding="10sp"
                android:text="@string/tv_reg_h"
                android:textAlignment="center"
                android:textColor="#FDFCFC"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/insert_text" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/name1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            android:autofillHints="Name"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/mail" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <EditText
            android:id="@+id/reg_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            android:inputType="text"
            android:autofillHints="Name"
            android:layout_marginStart="7dp"
            />

        <LinearLayout
            android:id="@+id/rl_ph"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_enabled_fill0_wght400_grad0_opsz48" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/ph"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <EditText
            android:id="@+id/reg_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_ph"
            android:inputType="text"
            android:autofillHints="Name"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/pas"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reg_pas"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:hint="@string/user_pass"
                android:inputType="text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:src="@drawable/visibility" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/cpas"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reg_cpas"
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:autofillHints="Name"
                android:hint="@string/user_pass"
                android:inputType="text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:src="@drawable/visibility"/>

        </LinearLayout>
        <Button
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textSize="25sp"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/black"
            android:layout_gravity="center"

            />

    </LinearLayout>


</FrameLayout>